Minor fixes for existing templates (+8 squashed commits) Squashed commits: [5d6f130] Update README.md [c99683a] Update README.md [c932319] Update README.md [6d4d7cd] Update README.md [5c2d103] Update README.md [dac7425] Update README.md [8e096d7] Update README.md [dd3d973] Update README.md

--- a/app/assets/stylesheets/angular.sass
+++ b/app/assets/stylesheets/angular.sass
@@ -1,3 +1,2 @@
-#demo
-  background: red
+#angular
   margin-bottom: 20px
